<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Band</string>
    <string name="kPrefs">srhdesigns.com.Band</string>
    <string name="kListKey">srhdesigns.com.Band.Key.List</string>
    <string name="hello_world">This is where a PDF of the scale would Load</string>
    <string name="action_about">About</string>
    <string name="kbaseurl">https://dl.dropboxusercontent.com/u/65267767/FHS%20Band/</string>
    <string name="title_activity_about">About the Band</string>
    <string name="title_activity_scales">Scales</string>
    <string name="title_activity_directors">Directors</string>
    <string name="title_activity_app_about">About</string>
    
    <string name="cat_app">Application</string>
    <string name="dev1">Stephen Harlow</string>
    <string name="dev2">Kyle Huggins</string>
    <string name="cat_more">More</string>
    <string name="app_src">Source Code</string>
    <string name="app_report">Report a bug</string>
    <string name="app_changes">Changelog</string>

    <string name="cat_osl">Open-Source Licenses</string>
    <string name="osl-aniqroid">aniqroid-3.1.jar</string>
    <string name="osl-commonsio">commons-io-2.4.jar</string>
    <string name="osl-ddplist">dd-plist.jar</string>
    <string name="osl-httpcore">httpcore-4.4.jar</string>
    <string name="osl-materialnav">MaterialNavigationDrawer</string>

</resources>
